updated Cart and fixed the invisible hamburger button

--- a/css/checkoutstyles.css
+++ b/css/checkoutstyles.css
@@ -62,16 +62,25 @@ body {
   margin: 0 auto;
 }
 .cartlist .items {
-  display: flex;
+  display: grid;
+  grid-template-columns: 130px auto;
   align-items: center;
-  width: 90%; 
+  width: 70vw; 
+  height: 170px ;
+  min-width: 600px;
   background: #fff;
   box-shadow: 0 10px 20px rgba(0,0,0,0.3);
   border-radius: 5px;
   padding: 10px;
-  margin: 5px 10px;;
+  margin: 5px 10px;
   height: fit-content;
   align-self: center;
+}
+.cartlist .items .img{
+  display: grid;
+  width: 100px;
+  height: 100px;
+  margin: 10px;
 }
 .cartlist .items img {
   box-sizing: border-box;
@@ -79,44 +88,52 @@ body {
 	height: 100px;
 	width: 100px;
 }
-.cartlist .items .name{
-  box-sizing: border-box;
+.cartlist .items .box{
   position: relative;
-  width: 55%;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 40% 50%;
+  grid-template-rows: 80px;
+  width: 100%;
+  height: 100%;
 }
 .cartlist .items .desc{
+  grid-column: 1;
+  grid-row: 1;
   position: relative;
-	padding: 5px 20px;
+	padding: 18px 20px 0 0; 
 	opacity: 0.8;
 	font-weight: 900;
-	font-size: 20px;
+	font-size:2em;
 }
 .cartlist .items .title {
+  grid-column: 1;
+  grid-row: 1;
   position: relative;
 	color: black;
-	padding: 0 20px;  
+	padding: 65px 20px 0 0;  
+  height: fit-content;
+  font-size: 1.5em;
 }
-.cartlist .items .price{
+ .items .price{
+  grid-column: 1;
+  grid-row: 2;
   box-sizing: border-box;
-  position: relative;
-  width: 10%;
+  width: auto;
 	color:#0B8973;
 	font-size: 20px;
 	font-weight:bold;
-  text-align: center;
 }
-.cartlist .items .btn{
-  box-sizing: border-box;
+ .items .bin{
+  grid-column: 2;
+  grid-row: 2;
   position: relative;
-	font-size: 15px;
-  color: white;
-  background-color: #14967F;
+	font-size: 30px;
+  color: #14967F;
+  background-color: transparent;
   padding: 5px;
   font-weight: 900;
   font-family: serif;
-  border: 1px solid #0B8973;
-  border-radius: 20px;
+  border: none;
   width: 8%;
   height: 35px;
   display: flex; 
@@ -124,40 +141,49 @@ body {
   align-items: center;
   margin: 0 1em;
 }
-.qty-btn{
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	height: 35px;
-	border: 1px solid #0B8973;
-	border-radius: 20px;
-	width: 8%;
-  margin: 0 1em;
-}
 .inc-btn, .dec-btn{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	font-size: 15px;
-	height: 35px;
-	width: 35px;
-	padding: 10px 10px;
+	position: absolute;
+	font-size: 12px;
+	height: 30px;
+	width: 30px;
+	padding: 2px;
 	margin: 0;
 	font-weight: 900;
-	font-family: serif;
-	border: none;
-	background-color: transparent;
+	border-radius: 20px;
+	color: white;
+	border:1px solid #0B8973;;
+	background-color: #14967F;
+	bottom: 45px;
+	z-index: 3;
+}
+.dec-btn{
+	left:25em;
+}
+.inc-btn{
+	left:30em;
 }
 .qty-input{
-	margin: 0;
-	padding: 0;
-	height: 30px;
-	width: 40px;
+	position: absolute;
 	text-align: center;
-	border: none;
-	background-color: transparent;
+	width: 25px;
+	height: 25px;
+	left: 22.2em;
+  bottom: 48px;
+	background: transparent;
+	border:1px solid #0B8973;;
+	border-style: none;
+	z-index: 2;
+}
+#form{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-column: 2;
+  width: 100%; 
+  align-items: end;
+  justify-items: end;
 }
 .cart-icon span{
+position: absolute;
 display: flex;
 width: 15px;
 height: 15px;
@@ -175,6 +201,46 @@ right: 3.9%;
 	cursor: pointer;
 	background-color: white;
 	color: #14967F;
+}
+@media (max-width: 1400px) {
+  .dec-btn{
+    left:18em;
+  }
+  .inc-btn{
+    left:23em;
+  }
+  .qty-input{
+    bottom: 48px;
+    left: 16.8em;
+  }
+}
+@media(max-width:1200px){
+  .cartlist .items .desc{
+    padding-top: 5px; 
+    opacity: 0.8;
+    font-weight: 900;
+    font-size:1.5em;
+  }
+  .cartlist .items .title {
+    font-size: 1.2em;
+    padding-top: 40px;
+  }
+  .dec-btn, .inc-btn{
+    bottom: 10px;
+  }
+  .dec-btn{
+    left:0em;
+  }
+  .inc-btn{
+    left:5.5em;
+  }
+  .qty-input{
+    bottom: 12px;
+    left: 2.9em;
+  }
+  .price{
+    justify-self: center;
+  }
 }
 @media (max-width: 820px) {
   .menu-btn {
