--- a/css/header_footer.css
+++ b/css/header_footer.css
@@ -155,6 +155,7 @@ ul {
 @media (max-width: 820px) {
 	.menu-btn {
 		display: block;
+		position: absolute;
 		z-index: 999;
 	}
 
